@@ -1,4 +1,7 @@
 # BFST2024Group8
 
+## How to run
+java --module-path /home/ostarup/Downloads/javafx-sdk-17.0.11/lib --add-modules javafx.controls,javafx.fxml -jar BFST2024Group8-1.0-SNAPSHOT-all.jar
+
 ## Code of Conduct
 The Code of Conduct for this project can be found [here](CODE_OF_CONDUCT.md)
